# Roadmap

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/blogging-platform-api/: Cargo.toml  README.md
backend/blogging-platform-api/migrations/: 20250129081509_create_table.up.sql
backend/blogging-platform-api/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  post_repository.rs
backend/expense_tracker/: README.md  config.py  demo.cast  lib.py  main.py  pyproject.toml  tasks.json
backend/github_user_activity/: README.md  index.js  package-lock.json  package.json
backend/number-guessing-game/: Cargo.toml  README.md
backend/number-guessing-game/src/: main.rs
backend/personal-blog/: README.md  app.js  auth.js  config.js  file-handler.js  package-lock.json  package.json
backend/personal-blog/routes/: article.js  index.js  login.js
backend/personal-blog/views/: admin.ejs  article.ejs  index.ejs  login.ejs  new-article.ejs  update-article.ejs
backend/task_tracker/: Cargo.toml  README.md
backend/task_tracker/src/: cli.rs  main.rs  tasks.json  utils.rs
backend/tmdb-cli/: Cargo.toml  README.md
backend/tmdb-cli/src/: cli.rs  main.rs  models.rs
backend/todo-app/: go.mod  go.sum
backend/todo-app/migration/: 000001_create_users_table.down.sql  000001_create_users_table.up.sql  000002_create_tasks_table.up.sql
backend/unit-converter/: README.md  app.js  package-lock.json  package.json  utils.js
backend/unit-converter/routes/: convert.js  result.js
backend/weather-app/: README.md  app.js  package-lock.json  package.json
(+24 files in other folders)
