[package]
name = "blogging-platform-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "derive", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
