[package]
name = "blogging-platform-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "db_helper"
path = "src/lib.rs"

[[bin]]
name = "blog_api"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "derive", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
