[package]
name = "blogging-platform-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "db_helper"
path = "src/lib.rs"

[[bin]]
name = "blog_api"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "derive", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
